Fixing puppet-lint and syntax issues

--- a/templates/gvpe.conf.erb
+++ b/templates/gvpe.conf.erb
@@ -1,7 +1,7 @@
 mtu = <%= @mtu %>
 ifname = <%= @ifname %>
 
-loglevel = <%= @loglevel %>
+log_level = <%= @log_level %>
 
 udp-port = <%= @udp_port %>
 tcp-port = <%= @tcp_port %>
