hotfix: typo fix on gvpe template and node
Pubkeys directory shouldn't be in plural

--- a/templates/gvpe.conf.erb
+++ b/templates/gvpe.conf.erb
@@ -1,7 +1,7 @@
 mtu = <%= @mtu %>
 ifname = <%= @ifname %>
 
-log_level = <%= @log_level %>
+loglevel = <%= @log_level %>
 
 udp-port = <%= @udp_port %>
 tcp-port = <%= @tcp_port %>
