Changes VPN IP address and VPN network address
The goal here is avoid a new node take the VPN IP address of another node.
This happens cause isn't possible to guarantee sequential order on concat fragments.

Includes vpn_ip parameters

--- a/templates/if-up.erb
+++ b/templates/if-up.erb
@@ -1,5 +1,4 @@
 #!/bin/sh
-<% net_prefix = @vpn_network[/(.*\.){3}/] %>
 ip link set $IFNAME address $MAC mtu $MTU up
-ip addr add <%= net_prefix %>$NODEID dev $IFNAME
+ip addr add <%= @vpn_ip %> dev $IFNAME
 ip route add <%= @vpn_network %> dev $IFNAME
